@@ -129,3 +129,4 @@ ATTR_keepcompleted,
 ATTR_disallowedtypes,
 ATTR_hostlist,
 ATTR_rerunnable,
+ATTR_is_transit,
