@@ -565,8 +565,18 @@ attribute_def que_attr_def[] =
     ATR_TYPE_LONG,
     PARENT_TYPE_QUE_EXC
   },
-
-
+  /* QR_ATR_is_transit */
+  { ATTR_is_transit,
+    decode_b,
+    encode_b,
+    set_b,
+    comp_b,
+    free_null,
+    NULL_FUNC,
+    NO_USER_SET,
+    ATR_TYPE_LONG,
+    PARENT_TYPE_QUE_EXC
+  },
   /* for routing queues */
 
   /* QR_ATR_RouteDestin */
